# custodia

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  NOTICE  README.md  SECURITY.md  go.mod
.github/: FUNDING.yml  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  custom.yml  feature_request.yml  release_task.yml  security_hardening.yml
.github/workflows/: ci.yml  codeql.yml  release.yml
clients/bash/: README.md  custodia.bash  custodia.sh
clients/cpp/: README.md
clients/java/: README.md  pom.xml
clients/node/: README.md  package.json
clients/python/: README.md  pyproject.toml
clients/python/custodia_client/: __init__.py  crypto.py  types.py
clients/python/examples/: high_level_crypto.py  keyspace_transport.py
clients/python/tests/: test_crypto_contracts.py  test_crypto_vectors.py  test_high_level_crypto_client.py  test_package_readiness.py  test_transport_types.py
clients/rust/: Cargo.toml  README.md
clients/rust/examples/: high_level_crypto.rs  keyspace_transport.rs
clients/rust/src/: crypto.rs  lib.rs
clients/rust/tests/: client_test.rs  package_readiness_test.rs  vector_test.rs
cmd/custodia-admin/: doctor.go  doctor_test.go  main.go  main_test.go
cmd/custodia-client/: doctor.go  doctor_test.go  main.go  main_test.go  profile.go
cmd/custodia-server/: health.go  health_test.go  main.go  main_test.go  sqlite_guard_test.go
cmd/custodia-signer/: main.go  main_test.go
cmd/vault-admin/: main.go  main_test.go
deploy/: Dockerfile  docker-compose.lite.yml  docker-compose.yml
deploy/examples/: config.full.yaml  config.lite.yaml  custodia-lite.service  custodia-server.full.yaml  custodia-server.lite.yaml  custodia-server.service  custodia-signer-lite.service  custodia-signer.service  custodia-signer.yaml  full-upgrade-target.env.example  lite.env.example  production.env.example
docs/: API.md  API_COMPATIBILITY_POLICY.md  AUDIT_ARCHIVE_RUNBOOK.md  AUDIT_EXPORT_INTEGRITY.md  AUDIT_SHIPMENT_RUNBOOK.md  BACKUP_RESTORE_RUNBOOK.md  BARE_METAL_FULL_INSTALL.md  BASH_SDK.md  BASH_TRANSPORT_HELPER.md  BUILD_METADATA.md  CA_SIGNING_SERVICE.md  CLIENT_CERTIFICATE_LIFECYCLE.md  CLIENT_CRYPTO_SPEC.md  CLIENT_CRYPTO_THREAT_MODEL.md  CLIENT_LIBRARIES.md  CLIENT_TRUSTED_CA.md  CONFIG_REFERENCE.md  CPP_CLIENT_SDK.md  CRL_OCSP_RUNBOOK.md  CUSTODIA_ALICE_BOB_SMOKE.md  CUSTODIA_CLIENTS.md  CUSTODIA_CLIENT_CLI.md  CUSTODIA_LITE_PROFILE.md  DATABASE_HA_RUNBOOK.md  DEPLOYMENT_MATRIX.md  DOCTOR.md  DR_RUNBOOK.md  END_TO_END_OPERATOR_SMOKE.md  FILE_PERMISSIONS.md  FORMAL_VERIFICATION.md  GO_CLIENT_SDK.md  IMPLEMENTATION_STATUS.md  JAVA_CLIENT_SDK.md  K3S_COCKROACHDB_HA.md  KUBERNETES_BOOTSTRAP_MATERIAL.md  KUBERNETES_INSTALL.md  KUBERNETES_LITE_BACKUP_RESTORE.md  KUBERNETES_RUNTIME_SMOKE.md  LINUX_PACKAGES.md  LITE_BACKUP_RESTORE.md  (+46 more)
docs/man/: custodia-admin.1.in  custodia-client.1.in  custodia-server.1.in  custodia-signer.1.in
formal/: CustodiaAccess.cfg  CustodiaAccess.tla  README.md
internal/audit/: hash.go  hash_test.go  verify.go  verify_test.go
internal/auditarchive/: archive.go  archive_test.go
internal/auditartifact/: artifact.go  artifact_test.go
internal/audits3shipper/: shipper.go  shipper_test.go
internal/auditshipper/: shipper.go  shipper_test.go
internal/certutil/: csr.go  csr_test.go  lite_bootstrap.go  lite_bootstrap_test.go
internal/clientcrypto/: aad.go  content.go  content_test.go  hpke.go  hpke_test.go  metadata.go  metadata_test.go  vector.go  vector_manifest_test.go  vectors_test.go
internal/config/: config.go  config_test.go
internal/crldist/: crldist.go  crldist_test.go
internal/formalmodel/: model.go  model_test.go
internal/httpapi/: crypto_boundary_test.go  enrollment.go  errors.go  handlers.go  middleware.go  server.go  server_test.go  web.go
internal/id/: id.go  id_test.go
internal/liteupgrade/: check.go  check_test.go
internal/model/: model.go  validation.go  validation_test.go
internal/mtls/: identity.go  identity_test.go  revocation.go  revocation_test.go  tls.go  tls_test.go
internal/productioncheck/: check.go  check_test.go  evidence.go  evidence_test.go
internal/ratelimit/: limiter.go  memory.go  memory_test.go  valkey.go  valkey_test.go
internal/revocationresponder/: responder.go  responder_test.go
internal/signeraudit/: recorder.go  recorder_test.go
internal/signing/: provider.go  provider_test.go  signing.go  signing_test.go
internal/store/: errors.go  memory.go  memory_test.go  postgres.go  postgres_integration_test.go  postgres_pgx.go  postgres_schema_test.go  sqlite.go  sqlite_guard_test.go  sqlite_schema_test.go  sqlite_store.go  sqlite_store_integration_test.go  store.go
internal/webauth/: passkey.go  passkey_assertion_command.go  passkey_assertion_command_test.go  passkey_authenticator_data.go  passkey_authenticator_data_test.go  passkey_challenge_store.go  passkey_challenge_store_test.go  passkey_client_data.go  passkey_client_data_test.go  passkey_cose.go  passkey_cose_test.go  passkey_credential_store.go  passkey_credential_store_test.go  passkey_test.go  session.go  session_test.go  totp.go  totp_test.go
migrations/sqlite/: 001_init.sql
scripts/: build-manpages.sh  build-sdk-snapshot.sh  check-audit-log-permissions.sh  check-build-metadata.sh  check-formal.sh  check-license-headers.sh  check-systemd-hardening.sh  dev-certs.sh  generate-sbom.sh  github-release-assets.sh  helm-render-check.sh  install-smoke.sh  k3s-cockroachdb-smoke.sh  kubernetes-runtime-smoke.sh  lite-backup-restore-smoke.sh  lite-upgrade-check.sh  minio-object-lock-smoke.sh  operational-readiness-smoke.sh  operator-e2e-smoke.sh  package-checksums.sh  package-install-smoke.sh  package-linux.sh  package-manifest-custodia-client.expected  package-manifest-custodia-clients.expected  package-manifest-custodia-sdk.expected  package-manifest-custodia-server.expected  package-smoke.sh  passkey-assertion-verify-command.sh  pkcs11-sign-command.sh  release-check.sh  release-keyspace-check.sh  release-publish.sh  softhsm-dev-token.sh  sqlite-backup.sh
(+107 files in other folders)
