# Copyright (c) 2026 Marco Fortina
# SPDX-License-Identifier: AGPL-3.0-only
#
# This file is part of Custodia.
# Custodia is distributed under the GNU Affero General Public License v3.0.
# See the accompanying LICENSE file for details.

[package]
name = "custodia-client"
version = "0.0.0"
edition = "2021"
rust-version = "1.75"
publish = false
license = "AGPL-3.0-only"
authors = ["Marco Fortina"]
description = "Custodia Rust client for opaque REST/mTLS payloads and local client-side crypto"

[lib]
name = "custodia_client"
path = "src/lib.rs"

[dependencies]
aes-gcm = "0.10"
base64 = "0.22"
hmac = "0.12"
rand = "0.8"
sha2 = "0.11"
x25519-dalek = { version = "2", features = ["static_secrets"] }
reqwest = { version = "=0.11.27", default-features = false, features = ["blocking", "json", "rustls-tls"] }
# Pin url below the Edition 2024 idna_adapter dependency pulled by newer url releases.
# Cargo 1.75 is the documented minimum for this package.
url = "=2.5.0"
# reqwest 0.11 accepts indexmap 2.x transitively through url/idna dependencies.
# Pin indexmap below releases that pull hashbrown 0.17, which requires Cargo Edition 2024 support.
indexmap = "=2.2.6"
# Keep a direct Cargo-1.75-compatible hashbrown pin so local lockfile generation
# cannot resolve the Edition 2024 hashbrown 0.17 line through newer indexes.
hashbrown = "=0.14.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
urlencoding = "2.1"
