# Copyright (c) 2026 Marco Fortina
# SPDX-License-Identifier: AGPL-3.0-only
#
# This file is part of Custodia.
# Custodia is distributed under the GNU Affero General Public License v3.0.
# See the accompanying LICENSE file for details.

[package]
name = "custodia-client"
version = "0.0.0"
edition = "2021"
rust-version = "1.75"
publish = false
license = "AGPL-3.0-only"
authors = ["Marco Fortina"]
description = "Custodia Rust client for opaque REST/mTLS payloads and local client-side crypto"

[lib]
name = "custodia_client"
path = "src/lib.rs"

[dependencies]
aes-gcm = "0.10"
base64 = "0.22"
hmac = "0.13"
rand = "0.10"
sha2 = "0.11"
x25519-dalek = { version = "2", features = ["static_secrets"] }
reqwest = { version = "0.12.28", default-features = false, features = ["blocking", "json", "rustls-tls"] }
# reqwest 0.12 pulls the newer rustls-webpki/idna security baseline. Keep url
# explicit so lockfile regeneration cannot drift back to the vulnerable idna 0.5 line.
url = "2.5.8"
# Keep these direct dependency lines aligned with the Dependabot security baseline.
# They intentionally require the newer Rust MSRV documented for this SDK.
indexmap = "2.14"
hashbrown = "0.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
urlencoding = "2.1"
